# vallex

./: README-ZH.md  README.md  pyproject.toml
vallex/: launch-ui.py
vallex/data/: collation.py  datamodule.py  tokenizer.py
vallex/models/: transformer.py  vallex.py
vallex/modules/: scaling.py  scheduler.py
vallex/utils/: generation.py  prompt_making.py
vallex/utils/g2p/: __init__.py  cleaners.py
