[tool.poetry]
name = "vall-e-x"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
soundfile = "^0.12.1"
numpy = "^1.26.1"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
tokenizers = "^0.14.1"
encodec = "^0.1.1"
langid = "^1.1.6"
wget = "^3.2"
unidecode = "^1.3.7"
pyopenjtalk-prebuilt = "^0.3.0"
pypinyin = "^0.49.0"
inflect = "^7.0.0"
cn2an = "^0.5.22"
jieba = "^0.42.1"
eng-to-ipa = "^0.0.2"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
matplotlib = "^3.8.0"
gradio = "^3.50.2"
nltk = "^3.8.1"
sudachipy = "^0.6.7"
sudachidict-core = "^20230927"
vocos = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
